# Langchaining

./: .gitignore  pyproject.toml
langchaining/: helpers.py
langchaining/agents/: custom_agent.py  main.py  tools.py  validate.py
langchaining/sf/: main.py  templates.py  vectorstore.py
langchaining/sf/raw/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
langchaining/sf/raw/db/: index.faiss  index.pkl
