[tool.poetry]
name = "langchaining"
version = "0.1.0"
description = ""
authors = ["Lee <lee.m.everett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
langchain = "0.0.139"
openai = "^0.27.4"
faiss-cpu = "^1.7.3"
tiktoken = "^0.3.3"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
